// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $255.00
  </p>
</div>
`;

exports[`Should render ExpensesSummary correctly with mode expenses 1`] = `
<div>
  <p>
    Viewing 
    8
     
    expenses
     totalling 
    $25,546,848.00
  </p>
</div>
`;
